--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        return true;
     }
     liff.init({
-      liffId: '2001879035-W76vGVOP'
+      liffId: '2001879093-noLzxbRJ'
     }).catch((err) => {
       console.log(err);
     });
